bridge: unmark a string from translation that shouldn’t be translatable

--- a/src/connection-editor/ce-page-bridge.ui
+++ b/src/connection-editor/ce-page-bridge.ui
@@ -488,7 +488,7 @@
         <property name="can_focus">True</property>
         <property name="hexpand">True</property>
         <property name="invisible_char">●</property>
-        <property name="text" translatable="yes">0</property>
+        <property name="text">0</property>
         <property name="adjustment">bridge_group_fwd_mask_adjustment</property>
         <property name="climb_rate">1</property>
         <property name="numeric">True</property>
