--- a/src/connection-editor/ce-page-bridge.ui
+++ b/src/connection-editor/ce-page-bridge.ui
@@ -244,6 +244,7 @@
           <object class="GtkSpinButton" id="bridge_forward_delay">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
+            <property name="tooltip_text" translatable="yes">STP forwarding delay, in seconds</property>
             <property name="hexpand">True</property>
             <property name="invisible_char">●</property>
             <property name="adjustment">bridge_forward_delay_adjustment</property>
@@ -284,6 +285,7 @@
           <object class="GtkSpinButton" id="bridge_hello_time">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
+            <property name="tooltip_text" translatable="yes">STP hello time, in seconds</property>
             <property name="hexpand">True</property>
             <property name="invisible_char">●</property>
             <property name="adjustment">bridge_hello_time_adjustment</property>
@@ -321,6 +323,7 @@
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="receives_default">False</property>
+        <property name="tooltip_text" translatable="yes">Controls whether IGMP snooping is enabled for this bridge. Note that if snooping was automatically disabled due to hash collisions, the system may refuse to enable the feature until the collisions are resolved.</property>
         <property name="use_underline">True</property>
         <property name="draw_indicator">True</property>
       </object>
@@ -336,6 +339,7 @@
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="receives_default">False</property>
+        <property name="tooltip_text" translatable="yes">Controls whether Spanning Tree Protocol (STP) is enabled for this bridge</property>
         <property name="use_underline">True</property>
         <property name="xalign">0</property>
         <property name="draw_indicator">True</property>
@@ -350,6 +354,7 @@
       <object class="GtkSpinButton" id="bridge_priority">
         <property name="visible">True</property>
         <property name="can_focus">True</property>
+        <property name="tooltip_text" translatable="yes">STP priority for this bridge. Lower values are "better"; the lowest priority bridge will be elected the root bridge.</property>
         <property name="hexpand">True</property>
         <property name="invisible_char">●</property>
         <property name="adjustment">bridge_priority_adjustment</property>
@@ -383,6 +388,7 @@
           <object class="GtkSpinButton" id="bridge_max_age">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
+            <property name="tooltip_text" translatable="yes">STP maximum message age, in seconds</property>
             <property name="hexpand">True</property>
             <property name="invisible_char">●</property>
             <property name="adjustment">bridge_max_age_adjustment</property>
@@ -437,6 +443,7 @@
           <object class="GtkSpinButton" id="bridge_ageing_time">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
+            <property name="tooltip_text" translatable="yes">The Ethernet MAC address aging time, in seconds</property>
             <property name="hexpand">True</property>
             <property name="invisible_char">●</property>
             <property name="adjustment">bridge_ageing_time_adjustment</property>
@@ -486,6 +493,7 @@
       <object class="GtkSpinButton" id="bridge_group_fwd_mask">
         <property name="visible">True</property>
         <property name="can_focus">True</property>
+        <property name="tooltip_text" translatable="yes">A mask of 16 bits, each corrisponding to a group address in the range from 01:80:C2:00:00:00 to 01:80:C2:00:00:0F that must be forwarded. The mask can't have bits 0, 1 or 2 set because they are used for STP, MAC pause frames and LACP.</property>
         <property name="hexpand">True</property>
         <property name="invisible_char">●</property>
         <property name="text" translatable="yes">0</property>
