--- a/src/connection-editor/ce-page-bridge.ui
+++ b/src/connection-editor/ce-page-bridge.ui
@@ -354,7 +354,7 @@
       <object class="GtkSpinButton" id="bridge_priority">
         <property name="visible">True</property>
         <property name="can_focus">True</property>
-        <property name="tooltip_text" translatable="yes">STP priority for this bridge. Lower values are "better"; the lowest priority bridge will be elected the root bridge.</property>
+        <property name="tooltip_text" translatable="yes">STP priority for this bridge. Lower values are “better”; the lowest priority bridge will be elected the root bridge.</property>
         <property name="hexpand">True</property>
         <property name="invisible_char">●</property>
         <property name="adjustment">bridge_priority_adjustment</property>
@@ -493,10 +493,10 @@
       <object class="GtkSpinButton" id="bridge_group_fwd_mask">
         <property name="visible">True</property>
         <property name="can_focus">True</property>
-        <property name="tooltip_text" translatable="yes">A mask of 16 bits, each corrisponding to a group address in the range from 01:80:C2:00:00:00 to 01:80:C2:00:00:0F that must be forwarded. The mask can't have bits 0, 1 or 2 set because they are used for STP, MAC pause frames and LACP.</property>
+        <property name="tooltip_text" translatable="yes">A mask of 16 bits, each corresponding to a group address in the range from 01:80:C2:00:00:00 to 01:80:C2:00:00:0F that must be forwarded. The mask can’t have bits 0, 1 or 2 set because they are used for STP, MAC pause frames and LACP.</property>
         <property name="hexpand">True</property>
         <property name="invisible_char">●</property>
-        <property name="text" translatable="yes">0</property>
+        <property name="text">0</property>
         <property name="adjustment">bridge_group_fwd_mask_adjustment</property>
         <property name="climb_rate">1</property>
         <property name="numeric">True</property>
