editor: pppoe: add tooltips

--- a/src/connection-editor/ce-page-dsl.ui
+++ b/src/connection-editor/ce-page-dsl.ui
@@ -27,6 +27,7 @@
       <object class="GtkEntry" id="dsl_username">
         <property name="visible">True</property>
         <property name="can_focus">True</property>
+        <property name="tooltip_text" translatable="yes">Username used to authenticate with the PPPoE service.</property>
         <property name="hexpand">True</property>
       </object>
       <packing>
@@ -38,6 +39,7 @@
       <object class="GtkEntry" id="dsl_service">
         <property name="visible">True</property>
         <property name="can_focus">True</property>
+        <property name="tooltip_text" translatable="yes">Only initiate sessions with access concentrators that provide the specified service. For most providers this should be left blank.</property>
         <property name="hexpand">True</property>
       </object>
       <packing>
@@ -78,6 +80,7 @@
       <object class="GtkEntry" id="dsl_password">
         <property name="visible">True</property>
         <property name="can_focus">True</property>
+        <property name="tooltip_text" translatable="yes">Password used to authenticate with the PPPoE service.</property>
         <property name="visibility">False</property>
       </object>
       <packing>
@@ -131,6 +134,7 @@
       <object class="GtkEntry" id="dsl_interface">
         <property name="visible">True</property>
         <property name="can_focus">True</property>
+        <property name="tooltip_text" translatable="yes">An arbitrary name to assign to the newly created PPP interface.</property>
       </object>
       <packing>
         <property name="left_attach">1</property>
@@ -145,6 +149,7 @@
         <child internal-child="entry">
           <object class="GtkEntry">
             <property name="can_focus">True</property>
+            <property name="tooltip_text" translatable="yes">The interface on which the PPP connection will be established.</property>
           </object>
         </child>
       </object>
