--- a/src/connection-editor/ce-page-ip6.ui
+++ b/src/connection-editor/ce-page-ip6.ui
@@ -308,7 +308,7 @@
                   <object class="GtkLabel" id="ip6_addr_gen_mode_label">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="label" translatable="yes">IPv6 SLAAC _generation mode:</property>
+                    <property name="label" translatable="yes">IPv6 address _generation mode:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">ip6_addr_gen_mode_combo</property>
                     <property name="xalign">0</property>
