connection-editor: Change labelling style
Replace the left justified labels with right justified ones, reduce the
space between label and entry and drop the unnecessary ":". This more
closely matches the GNOME UI style, reducing the differences between
gnome-control-center's Network panel and nm-connection-editor.

https://bugzilla.gnome.org/show_bug.cgi?id=794295

--- a/src/connection-editor/ce-page-dsl.ui
+++ b/src/connection-editor/ce-page-dsl.ui
@@ -8,15 +8,15 @@
     <property name="hexpand">True</property>
     <property name="border_width">12</property>
     <property name="row_spacing">6</property>
-    <property name="column_spacing">12</property>
+    <property name="column_spacing">6</property>
     <child>
       <object class="GtkLabel" id="label24">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="label" translatable="yes">_Username:</property>
+        <property name="label" translatable="yes">_Username</property>
         <property name="use_underline">True</property>
         <property name="mnemonic_widget">dsl_username</property>
-        <property name="xalign">0</property>
+        <property name="xalign">1</property>
       </object>
       <packing>
         <property name="left_attach">0</property>
@@ -51,10 +51,10 @@
       <object class="GtkLabel" id="label26">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="label" translatable="yes">_Service:</property>
+        <property name="label" translatable="yes">_Service</property>
         <property name="use_underline">True</property>
         <property name="mnemonic_widget">dsl_service</property>
-        <property name="xalign">0</property>
+        <property name="xalign">1</property>
       </object>
       <packing>
         <property name="left_attach">0</property>
@@ -92,10 +92,10 @@
       <object class="GtkLabel" id="label25">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="label" translatable="yes">_Password:</property>
+        <property name="label" translatable="yes">_Password</property>
         <property name="use_underline">True</property>
         <property name="mnemonic_widget">dsl_password</property>
-        <property name="xalign">0</property>
+        <property name="xalign">1</property>
       </object>
       <packing>
         <property name="left_attach">0</property>
@@ -106,10 +106,10 @@
       <object class="GtkLabel" id="dsl_interface_label">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="label" translatable="yes">PPP _interface:</property>
+        <property name="label" translatable="yes">PPP _interface</property>
         <property name="use_underline">True</property>
         <property name="mnemonic_widget">dsl_interface</property>
-        <property name="xalign">0</property>
+        <property name="xalign">1</property>
       </object>
       <packing>
         <property name="left_attach">0</property>
@@ -120,10 +120,10 @@
       <object class="GtkLabel">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="label" translatable="yes">P_arent interface:</property>
+        <property name="label" translatable="yes">P_arent interface</property>
         <property name="use_underline">True</property>
         <property name="mnemonic_widget">dsl_parent</property>
-        <property name="xalign">0</property>
+        <property name="xalign">1</property>
       </object>
       <packing>
         <property name="left_attach">0</property>
