--- a/src/connection-editor/ce-page-general.ui
+++ b/src/connection-editor/ce-page-general.ui
@@ -21,7 +21,7 @@
     <property name="can_focus">False</property>
     <property name="border_width">12</property>
     <property name="row_spacing">6</property>
-    <property name="column_spacing">12</property>
+    <property name="column_spacing">6</property>
     <child>
       <object class="GtkCheckButton" id="dependent_vpn_checkbox">
         <property name="label" translatable="yes">Automatically connect to _VPN when using this connection</property>
@@ -96,10 +96,10 @@
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="halign">start</property>
-            <property name="label" translatable="yes">Connection _priority for auto-activation:</property>
+            <property name="label" translatable="yes">Connection _priority for auto-activation</property>
             <property name="use_underline">True</property>
             <property name="mnemonic_widget">autoconnect_prio</property>
-            <property name="xalign">0</property>
+            <property name="xalign">1</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -142,9 +142,9 @@
         <child>
           <object class="GtkLabel" id="firewall_zone_label">
             <property name="can_focus">False</property>
-            <property name="label" translatable="yes">Firewall _zone:</property>
+            <property name="label" translatable="yes">Firewall _zone</property>
             <property name="use_underline">True</property>
-            <property name="xalign">0</property>
+            <property name="xalign">1</property>
           </object>
           <packing>
             <property name="expand">False</property>
