--- a/src/connection-editor/ce-page-general.ui
+++ b/src/connection-editor/ce-page-general.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.20.0 -->
+<!-- Generated with glade 3.20.2 -->
 <interface>
   <requires lib="gtk+" version="3.10"/>
   <object class="GtkAdjustment" id="adjustment1">
@@ -23,26 +23,9 @@
     <property name="row_spacing">6</property>
     <property name="column_spacing">6</property>
     <child>
-      <object class="GtkCheckButton" id="dependent_vpn_checkbox">
-        <property name="label" translatable="yes">Automatically connect to _VPN when using this connection</property>
-        <property name="visible">True</property>
-        <property name="can_focus">True</property>
-        <property name="receives_default">False</property>
-        <property name="hexpand">True</property>
-        <property name="use_underline">True</property>
-        <property name="draw_indicator">True</property>
-      </object>
-      <packing>
-        <property name="left_attach">0</property>
-        <property name="top_attach">3</property>
-      </packing>
-    </child>
-    <child>
       <object class="GtkComboBox" id="dependent_vpn_combo">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="margin_start">26</property>
-        <property name="margin_bottom">12</property>
         <property name="hexpand">True</property>
         <property name="model">dependent_vpn_model</property>
         <child>
@@ -53,8 +36,8 @@
         </child>
       </object>
       <packing>
-        <property name="left_attach">0</property>
-        <property name="top_attach">4</property>
+        <property name="left_attach">1</property>
+        <property name="top_attach">2</property>
       </packing>
     </child>
     <child>
@@ -63,7 +46,22 @@
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="receives_default">False</property>
-        <property name="margin_bottom">12</property>
+        <property name="use_underline">True</property>
+        <property name="draw_indicator">True</property>
+      </object>
+      <packing>
+        <property name="left_attach">0</property>
+        <property name="top_attach">1</property>
+        <property name="width">2</property>
+      </packing>
+    </child>
+    <child>
+      <object class="GtkCheckButton" id="dependent_vpn_checkbox">
+        <property name="label" translatable="yes">Automatically connect to _VPN</property>
+        <property name="visible">True</property>
+        <property name="can_focus">True</property>
+        <property name="receives_default">False</property>
+        <property name="hexpand">True</property>
         <property name="use_underline">True</property>
         <property name="draw_indicator">True</property>
       </object>
@@ -73,8 +71,31 @@
       </packing>
     </child>
     <child>
+      <object class="GtkLabel" id="firewall_zone_label">
+        <property name="can_focus">False</property>
+        <property name="label" translatable="yes">Firewall _zone</property>
+        <property name="use_underline">True</property>
+        <property name="xalign">0</property>
+      </object>
+      <packing>
+        <property name="left_attach">0</property>
+        <property name="top_attach">3</property>
+      </packing>
+    </child>
+    <child>
+      <object class="GtkVBox" id="firewall_zone_vbox">
+        <property name="visible">True</property>
+        <property name="can_focus">True</property>
+        <property name="hexpand">True</property>
+      </object>
+      <packing>
+        <property name="left_attach">1</property>
+        <property name="top_attach">3</property>
+      </packing>
+    </child>
+    <child>
       <object class="GtkCheckButton" id="connection_autoconnect">
-        <property name="label" translatable="yes">_Automatically connect to this network when it is available</property>
+        <property name="label" translatable="yes">Connect _automatically with priority</property>
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="receives_default">False</property>
@@ -88,86 +109,20 @@
       </packing>
     </child>
     <child>
-      <object class="GtkBox" id="box1">
+      <object class="GtkSpinButton" id="autoconnect_prio">
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <child>
-          <object class="GtkLabel" id="autoconnect_prio_label">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="halign">start</property>
-            <property name="label" translatable="yes">Connection _priority for auto-activation</property>
-            <property name="use_underline">True</property>
-            <property name="mnemonic_widget">autoconnect_prio</property>
-            <property name="xalign">1</property>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">False</property>
-            <property name="position">0</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkSpinButton" id="autoconnect_prio">
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="tooltip_text" translatable="yes">Connection priority for automatic activation. Connections with higher numbers are preferred when selecting profiles for automatic activation. Default value is 0.</property>
-            <property name="hexpand">True</property>
-            <property name="invisible_char">●</property>
-            <property name="text">0</property>
-            <property name="adjustment">adjustment1</property>
-            <property name="climb_rate">1</property>
-            <property name="numeric">True</property>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="padding">12</property>
-            <property name="position">1</property>
-          </packing>
-        </child>
+        <property name="can_focus">True</property>
+        <property name="tooltip_text" translatable="yes">Connection priority for automatic activation. Connections with higher numbers are preferred when selecting profiles for automatic activation. Default value is 0.</property>
+        <property name="hexpand">True</property>
+        <property name="invisible_char">●</property>
+        <property name="text">0</property>
+        <property name="adjustment">adjustment1</property>
+        <property name="climb_rate">1</property>
+        <property name="numeric">True</property>
       </object>
       <packing>
-        <property name="left_attach">0</property>
-        <property name="top_attach">1</property>
-      </packing>
-    </child>
-    <child>
-      <object class="GtkBox" id="box2">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="valign">start</property>
-        <property name="vexpand">True</property>
-        <property name="spacing">6</property>
-        <child>
-          <object class="GtkLabel" id="firewall_zone_label">
-            <property name="can_focus">False</property>
-            <property name="label" translatable="yes">Firewall _zone</property>
-            <property name="use_underline">True</property>
-            <property name="xalign">1</property>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">0</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkVBox" id="firewall_zone_vbox">
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="hexpand">True</property>
-          </object>
-          <packing>
-            <property name="expand">True</property>
-            <property name="fill">True</property>
-            <property name="position">1</property>
-          </packing>
-        </child>
-      </object>
-      <packing>
-        <property name="left_attach">0</property>
-        <property name="top_attach">5</property>
+        <property name="left_attach">1</property>
+        <property name="top_attach">0</property>
       </packing>
     </child>
   </object>
