--- a/src/connection-editor/ce-page-general.ui
+++ b/src/connection-editor/ce-page-general.ui
@@ -127,7 +127,7 @@
       <object class="GtkComboBox" id="metered_combo">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="tooltip_text" translatable="yes">NetworkManager indicates to applications whether the connection is metered and therefore data usage should be restricted. Select which value ('Yes' or 'No') to indicate to applications, or 'Automatic' to use a default value based on the connection type and other heuristics.</property>
+        <property name="tooltip_text" translatable="yes">NetworkManager indicates to applications whether the connection is metered and therefore data usage should be restricted. Select which value (“Yes” or “No”) to indicate to applications, or “Automatic” to use a default value based on the connection type and other heuristics.</property>
         <property name="model">metered_store</property>
         <child>
           <object class="GtkCellRendererText" id="renderer2"/>
