editor: allow creating pppoe connections without parent interface
PPPoE connection that specify a parent interface are more flexible
because they work not only on Ethernet and allow another connection to
be active on the same device. However, due to this last feature,
nm-applet can't control them because it would not be possible to show
two connections active for the same device.

Now the editor can only create pppoe connection with parent-interface
and this made it impossible to activate the connection from the
applet. Add a new checkbox that allows to choose the pppoe connection
type, with a tooltip documenting the behavior of the two choices.

Fixes: 3c83f844ced4f620993054cddb19b22fe459fa0b

https://bugzilla.gnome.org/show_bug.cgi?id=791985
https://bugzilla.redhat.com/show_bug.cgi?id=1574175

--- a/src/connection-editor/ce-page-dsl.ui
+++ b/src/connection-editor/ce-page-dsl.ui
@@ -33,6 +33,7 @@
       <packing>
         <property name="left_attach">1</property>
         <property name="top_attach">2</property>
+        <property name="width">2</property>
       </packing>
     </child>
     <child>
@@ -45,6 +46,7 @@
       <packing>
         <property name="left_attach">1</property>
         <property name="top_attach">3</property>
+        <property name="width">2</property>
       </packing>
     </child>
     <child>
@@ -74,6 +76,7 @@
       <packing>
         <property name="left_attach">1</property>
         <property name="top_attach">5</property>
+        <property name="width">2</property>
       </packing>
     </child>
     <child>
@@ -86,6 +89,7 @@
       <packing>
         <property name="left_attach">1</property>
         <property name="top_attach">4</property>
+        <property name="width">2</property>
       </packing>
     </child>
     <child>
@@ -139,6 +143,7 @@
       <packing>
         <property name="left_attach">1</property>
         <property name="top_attach">1</property>
+        <property name="width">2</property>
       </packing>
     </child>
     <child>
@@ -155,6 +160,21 @@
       </object>
       <packing>
         <property name="left_attach">1</property>
+        <property name="top_attach">0</property>
+      </packing>
+    </child>
+    <child>
+      <object class="GtkCheckButton" id="dsl_claim_button">
+        <property name="label" translatable="yes">C_laim interface</property>
+        <property name="visible">True</property>
+        <property name="can_focus">True</property>
+        <property name="receives_default">False</property>
+        <property name="tooltip_text" translatable="yes">If selected, the connection will take exclusive control of the interface and it won't be possible to activate another connection on it. Note that the option can only be used for Ethernet interfaces. nm-applet is able to activate the connection only if this option is selected.</property>
+        <property name="use_underline">True</property>
+        <property name="draw_indicator">True</property>
+      </object>
+      <packing>
+        <property name="left_attach">2</property>
         <property name="top_attach">0</property>
       </packing>
     </child>
