editor: use a Unicode apostrophe in a new string
See https://developer.gnome.org/hig/stable/typography.html

--- a/src/connection-editor/ce-page-dsl.ui
+++ b/src/connection-editor/ce-page-dsl.ui
@@ -169,7 +169,7 @@
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="receives_default">False</property>
-        <property name="tooltip_text" translatable="yes">If selected, the connection will take exclusive control of the interface and it won't be possible to activate another connection on it. Note that the option can only be used for Ethernet interfaces. nm-applet is able to activate the connection only if this option is selected.</property>
+        <property name="tooltip_text" translatable="yes">If selected, the connection will take exclusive control of the interface and it won’t be possible to activate another connection on it. Note that the option can only be used for Ethernet interfaces. nm-applet is able to activate the connection only if this option is selected.</property>
         <property name="use_underline">True</property>
         <property name="draw_indicator">True</property>
       </object>
