--- a/src/connection-editor/nm-connection-list.ui
+++ b/src/connection-editor/nm-connection-list.ui
@@ -9,6 +9,7 @@
     <property name="default_width">600</property>
     <property name="default_height">400</property>
     <property name="gravity">north-east</property>
+    <property name="show_menubar">False</property>
     <signal name="destroy" handler="list_close_cb" swapped="no"/>
     <signal name="key-press-event" handler="key_press_cb" swapped="no"/>
     <child>
