--- a/src/connection-editor/ce-page-team.ui
+++ b/src/connection-editor/ce-page-team.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.20.0 -->
+<!-- Generated with glade 3.22.1 -->
 <interface>
   <requires lib="gtk+" version="3.10"/>
   <object class="GtkListStore" id="agg_select_policy_model">
@@ -287,6 +287,7 @@
         <property name="halign">start</property>
         <property name="label" translatable="yes">_Interface name:</property>
         <property name="use_underline">True</property>
+        <property name="mnemonic_widget">master_interface</property>
         <property name="xalign">0</property>
       </object>
       <packing>
