--- a/src/8021x.ui
+++ b/src/8021x.ui
@@ -4,7 +4,10 @@
   <requires lib="gtk+" version="3.10"/>
   <object class="GtkDialog" id="8021x_dialog">
     <property name="can_focus">False</property>
-    <property name="border_width">5</property>
+    <property name="margin_start">5</property>
+    <property name="margin_end">5</property>
+    <property name="margin_top">5</property>
+    <property name="margin_bottom">5</property>
     <property name="title" translatable="yes">802.1X authentication</property>
     <property name="resizable">False</property>
     <property name="modal">True</property>
@@ -66,7 +69,10 @@
           <object class="GtkHBox" id="hbox1">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="border_width">5</property>
+            <property name="margin_start">5</property>
+            <property name="margin_end">5</property>
+            <property name="margin_top">5</property>
+            <property name="margin_bottom">5</property>
             <property name="spacing">12</property>
             <child>
               <object class="GtkImage" id="image1">
