--- a/src/connection-editor/ce-ip6-routes.ui
+++ b/src/connection-editor/ce-ip6-routes.ui
@@ -6,7 +6,10 @@
     <property name="width_request">450</property>
     <property name="height_request">250</property>
     <property name="can_focus">False</property>
-    <property name="border_width">5</property>
+    <property name="margin_start">5</property>
+    <property name="margin_end">5</property>
+    <property name="margin_top">5</property>
+    <property name="margin_bottom">5</property>
     <property name="modal">True</property>
     <property name="window_position">center-on-parent</property>
     <property name="icon_name">stock-peferences</property>
@@ -62,7 +65,10 @@
           <object class="GtkVBox" id="vbox2">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="border_width">5</property>
+            <property name="margin_start">5</property>
+            <property name="margin_end">5</property>
+            <property name="margin_top">5</property>
+            <property name="margin_bottom">5</property>
             <property name="spacing">6</property>
             <child>
               <object class="GtkHBox" id="hbox5">
