--- a/src/connection-editor/ce-page-ppp.ui
+++ b/src/connection-editor/ce-page-ppp.ui
@@ -5,7 +5,10 @@
   <object class="GtkVBox" id="PppPage">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
-    <property name="border_width">12</property>
+    <property name="margin_start">12</property>
+    <property name="margin_end">12</property>
+    <property name="margin_top">12</property>
+    <property name="margin_bottom">12</property>
     <property name="spacing">18</property>
     <child>
       <object class="GtkVBox" id="vbox2">
