--- a/src/connection-editor/ce-ppp-auth-methods.ui
+++ b/src/connection-editor/ce-ppp-auth-methods.ui
@@ -4,7 +4,10 @@
   <requires lib="gtk+" version="3.10"/>
   <object class="GtkDialog" id="auth_methods_dialog">
     <property name="can_focus">False</property>
-    <property name="border_width">5</property>
+    <property name="margin_start">5</property>
+    <property name="margin_end">5</property>
+    <property name="margin_top">5</property>
+    <property name="margin_bottom">5</property>
     <property name="window_position">center-on-parent</property>
     <property name="default_width">400</property>
     <property name="icon_name">stock-preferences</property>
@@ -60,7 +63,10 @@
           <object class="GtkVBox" id="vbox1">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="border_width">5</property>
+            <property name="margin_start">5</property>
+            <property name="margin_end">5</property>
+            <property name="margin_top">5</property>
+            <property name="margin_bottom">5</property>
             <property name="spacing">6</property>
             <child>
               <object class="GtkLabel" id="label3">
