--- a/src/connection-editor/nm-connection-editor.ui
+++ b/src/connection-editor/nm-connection-editor.ui
@@ -90,7 +90,10 @@
           <object class="GtkVBox" id="vbox3">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="border_width">5</property>
+            <property name="margin_start">5</property>
+            <property name="margin_end">5</property>
+            <property name="margin_top">5</property>
+            <property name="margin_bottom">5</property>
             <property name="spacing">6</property>
             <child>
               <object class="GtkHBox" id="hbox3">
@@ -246,7 +249,10 @@
   </object>
   <object class="GtkDialog" id="relabel_dialog">
     <property name="can_focus">False</property>
-    <property name="border_width">5</property>
+    <property name="margin_start">5</property>
+    <property name="margin_end">5</property>
+    <property name="margin_top">5</property>
+    <property name="margin_bottom">5</property>
     <property name="title" translatable="yes">File Relabel</property>
     <property name="modal">True</property>
     <property name="default_width">500</property>
