--- a/src/gsm-unlock.ui
+++ b/src/gsm-unlock.ui
@@ -4,7 +4,10 @@
   <requires lib="gtk+" version="3.10"/>
   <object class="GtkDialog" id="unlock_dialog">
     <property name="can_focus">False</property>
-    <property name="border_width">5</property>
+    <property name="margin_start">5</property>
+    <property name="margin_end">5</property>
+    <property name="margin_top">5</property>
+    <property name="margin_bottom">5</property>
     <property name="window_position">center</property>
     <property name="default_width">400</property>
     <property name="icon_name">dialog-password</property>
