--- a/src/info.ui
+++ b/src/info.ui
@@ -5,7 +5,10 @@
   <object class="GtkDialog" id="info_dialog">
     <property name="width_request">600</property>
     <property name="can_focus">False</property>
-    <property name="border_width">5</property>
+    <property name="margin_start">5</property>
+    <property name="margin_end">5</property>
+    <property name="margin_top">5</property>
+    <property name="margin_bottom">5</property>
     <property name="title" translatable="yes">Connection Information</property>
     <property name="resizable">False</property>
     <property name="window_position">center</property>
@@ -55,7 +58,10 @@
               <object class="GtkHBox" id="hbox2">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="border_width">5</property>
+                <property name="margin_start">5</property>
+                <property name="margin_end">5</property>
+                <property name="margin_top">5</property>
+                <property name="margin_bottom">5</property>
                 <property name="spacing">12</property>
                 <child>
                   <object class="GtkImage" id="image6">
