--- a/src/libnm-gtk/wifi.ui
+++ b/src/libnm-gtk/wifi.ui
@@ -27,7 +27,10 @@
   <object class="GtkHBox" id="hbox1">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
-    <property name="border_width">5</property>
+    <property name="margin_start">5</property>
+    <property name="margin_end">5</property>
+    <property name="margin_top">5</property>
+    <property name="margin_bottom">5</property>
     <property name="spacing">12</property>
     <child>
       <object class="GtkImage" id="image1">
