glade: use margin_start/margin_end instead of left/right
The latter is deprecated in favor of the former. The difference in
behavior is that they have opposite meanings in RTL scripts, which is
probaby good (well, at least for the labels).

Notably, this future-proofs us for Gtk4 that drops the deprecated
properties.

--- a/src/connection-editor/ce-page-team-port.ui
+++ b/src/connection-editor/ce-page-team-port.ui
@@ -155,8 +155,8 @@
         <child internal-child="action_area">
           <object class="GtkButtonBox" id="advanced_buttons">
             <property name="can_focus">False</property>
-            <property name="margin_left">6</property>
-            <property name="margin_right">6</property>
+            <property name="margin_start">6</property>
+            <property name="margin_end">6</property>
             <property name="margin_top">6</property>
             <property name="margin_bottom">6</property>
             <property name="layout_style">end</property>
@@ -199,8 +199,8 @@
           <object class="GtkNotebook" id="advanced_notebook">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="margin_left">6</property>
-            <property name="margin_right">6</property>
+            <property name="margin_start">6</property>
+            <property name="margin_end">6</property>
             <property name="margin_top">6</property>
             <property name="margin_bottom">6</property>
             <child>
