--- a/src/libnma/nma-mobile-wizard.ui
+++ b/src/libnma/nma-mobile-wizard.ui
@@ -95,7 +95,7 @@
           <object class="GtkLabel" id="provider_name_label">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="margin_left">25</property>
+            <property name="margin_start">25</property>
             <property name="label" translatable="yes">Your broadband provider’s name</property>
             <property name="xalign">0</property>
           </object>
@@ -109,7 +109,7 @@
           <object class="GtkLabel" id="plan_name_label">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="margin_left">25</property>
+            <property name="margin_start">25</property>
             <property name="label" translatable="yes">Your broadband billing plan name</property>
             <property name="xalign">0</property>
           </object>
@@ -123,7 +123,7 @@
           <object class="GtkLabel" id="apn_label">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="margin_left">25</property>
+            <property name="margin_start">25</property>
             <property name="label" translatable="yes">(in some cases) Your broadband billing plan APN (Access Point Name)</property>
             <property name="xalign">0</property>
           </object>
@@ -254,7 +254,7 @@
             <property name="height_request">140</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="margin_left">25</property>
+            <property name="margin_start">25</property>
             <property name="vexpand">True</property>
             <property name="hscrollbar_policy">never</property>
             <property name="shadow_type">in</property>
@@ -296,7 +296,7 @@
           <object class="GtkGrid">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="margin_left">25</property>
+            <property name="margin_start">25</property>
             <property name="row_spacing">12</property>
             <property name="column_spacing">12</property>
             <child>
@@ -505,7 +505,7 @@ If you are unsure of your plan please ask your provider for your plan’s APN.</
           <object class="GtkLabel" id="confirm_device">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="margin_left">25</property>
+            <property name="margin_start">25</property>
             <property name="xalign">0</property>
           </object>
           <packing>
@@ -531,7 +531,7 @@ If you are unsure of your plan please ask your provider for your plan’s APN.</
           <object class="GtkLabel" id="confirm_provider">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="margin_left">25</property>
+            <property name="margin_start">25</property>
             <property name="xalign">0</property>
           </object>
           <packing>
@@ -562,7 +562,7 @@ If you are unsure of your plan please ask your provider for your plan’s APN.</
               <object class="GtkLabel" id="confirm_plan">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="margin_left">25</property>
+                <property name="margin_start">25</property>
                 <property name="xalign">0</property>
               </object>
               <packing>
@@ -575,7 +575,7 @@ If you are unsure of your plan please ask your provider for your plan’s APN.</
               <object class="GtkLabel" id="confirm_apn">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="margin_left">25</property>
+                <property name="margin_start">25</property>
                 <property name="ypad">6</property>
                 <property name="xalign">0</property>
               </object>
