--- a/src/connection-editor/ce-page-ethernet.ui
+++ b/src/connection-editor/ce-page-ethernet.ui
@@ -254,7 +254,7 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">False</property>
-            <property name="margin_right">12</property>
+            <property name="margin_end">12</property>
             <property name="use_underline">True</property>
             <property name="xalign">0</property>
             <property name="draw_indicator">True</property>
@@ -270,7 +270,7 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">False</property>
-            <property name="margin_right">12</property>
+            <property name="margin_end">12</property>
             <property name="use_underline">True</property>
             <property name="xalign">0</property>
             <property name="draw_indicator">True</property>
@@ -439,7 +439,7 @@
       <object class="GtkLabel" id="ethernet_speed_label">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="margin_left">26</property>
+        <property name="margin_start">26</property>
         <property name="label" translatable="yes">_Speed</property>
         <property name="use_underline">True</property>
         <property name="mnemonic_widget">ethernet_speed</property>
@@ -473,7 +473,7 @@
       <object class="GtkLabel" id="ethernet_duplex_label">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="margin_left">26</property>
+        <property name="margin_start">26</property>
         <property name="label" translatable="yes">Duple_x</property>
         <property name="use_underline">True</property>
         <property name="mnemonic_widget">ethernet_duplex</property>
