glade: get rid of the GtkMisc.ypad property
It's long deprecated and gone from Gtk4.

--- a/src/libnma/nma-mobile-wizard.ui
+++ b/src/libnma/nma-mobile-wizard.ui
@@ -557,6 +557,7 @@ If you are unsure of your plan please ask your provider for your plan’s APN.</
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="orientation">vertical</property>
+            <property name="spacing">6</property>
             <child>
               <object class="GtkLabel" id="confirm_plan">
                 <property name="visible">True</property>
@@ -575,7 +576,6 @@ If you are unsure of your plan please ask your provider for your plan’s APN.</
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="margin_start">25</property>
-                <property name="ypad">6</property>
                 <property name="xalign">0</property>
               </object>
               <packing>
