--- a/src/connection-editor/ce-page-bridge.ui
+++ b/src/connection-editor/ce-page-bridge.ui
@@ -341,7 +341,7 @@
         <property name="receives_default">False</property>
         <property name="tooltip_text" translatable="yes">Controls whether Spanning Tree Protocol (STP) is enabled for this bridge</property>
         <property name="use_underline">True</property>
-        <property name="xalign">0</property>
+        <property name="halign">start</property>
         <property name="draw_indicator">True</property>
       </object>
       <packing>
